update build config and cleanup